--- a/Logindriver.html
+++ b/Logindriver.html
@@ -26,13 +26,14 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        section.section-registerdriver {
+        section.section-logindriver {
             width: 100%;
             margin-top: 5%;
         }
 
         .section-driver {
             width: 95%;
+            margin-left: 2.5%;
             display: flex;
             justify-content: center;
         }
@@ -337,7 +338,7 @@
         </div>
     </nav>
 
-    <section class="section-registerdriver">
+    <section class="section-logindriver">
         <div class="section-driver">
 
             <div class="wrapper">
@@ -383,7 +384,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
