--- a/Loginuser.html
+++ b/Loginuser.html
@@ -26,13 +26,14 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        section.section-registerdriver {
+        section.section-LoginUser {
             width: 100%;
             margin-top: 5%;
         }
 
-        .section-driver {
+        .section-login {
             width: 95%;
+            margin-left: 2.5%;
             display: flex;
             justify-content: center;
         }
@@ -337,8 +338,8 @@
         </div>
     </nav>
 
-    <section class="section-registerdriver">
-        <div class="section-driver">
+    <section class="section-LoginUser">
+        <div class="section-login">
 
             <div class="wrapper">
                 <div class="title">
@@ -382,7 +383,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
