--- a/Taxi.html
+++ b/Taxi.html
@@ -34,20 +34,20 @@
         }
 
         #aboutusour {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
         }
 
         .section-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             /* background: linear-gradient(43.28deg, #3837e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
         }
 
         .contener-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
         }
 
         .contener-clintes-servies {
@@ -81,15 +81,15 @@
         }
 
         h3.h3serviesg-taxi {
-            color: black;
+            color: wheat;
             font-size: 36px;
             margin: 5% 0;
         }
 
         p.pservies {
-            color: blueviolet;
+            color: black;
             line-height: 25px;
-            font-size: 17px;
+            font-size: 19px;
             margin: 5% 0;
         }
 
@@ -97,7 +97,7 @@
             background: none;
             border: none;
             outline: none;
-            width: 25%;
+            width: 35%;
             height: 40px;
             color: white;
             font-size: 16px;
@@ -106,19 +106,20 @@
         a.LINKOFTHETHING {
             width: 100%;
             height: 100%;
-            background-color: rgb(105, 144, 228);
-            color: rgba(45, 46, 46);
+            background-color: yellow;
+            color: blue;
             display: flex;
             align-items: center;
             justify-content: center;
             border-radius: 2.5rem;
+            font-size: 20px;
             transition: 2s;
         }
 
 
         a.LINKOFTHETHING:hover {
-            background-color: rgb(0 51 108);
-            color: rgb(179, 181, 211);
+            background-color: blue;
+            color: yellow !important;
             transform: translateY(-6px);
         }
 
@@ -126,31 +127,31 @@
         section#Taxi {
             width: 100%;
             position: relative;
-            margin: 5% 0;
+            margin:  0;
         }
 
         .section-clintes-servies-taxi {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             height: 100%;
         }
 
         .contener-clintes-servies-taxi {
             position: relative;
-            width: 97%;
-            margin: 1.5% 1.5%;
+            width: 100%;
+            margin:  0%;
             height: auto;
         }
 
         picture.img-picture-taxi {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             display: block;
         }
 
         picture.img-picture-taxi2 {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             display: block;
         }
 
@@ -208,8 +209,8 @@
         }
 
         .section-taxi-rental {
-            width: 97%;
-            margin: 2% 1.5% 3%;
+            width: 100%;
+            margin: 0;
             position: relative;
         }
 
@@ -236,8 +237,8 @@
         .details-taxi {
             background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
             border-radius: 2.5rem;
-            width: 95%;
-            margin: 2% 2.5%;
+            width: 100%;
+            margin: 0;
             padding: 2% 0;
             display: flex;
             justify-content: center;
@@ -285,7 +286,7 @@
 
         .items-start span {
             margin-left: -4%;
-            color: blueviolet;
+            color: blue;
             font-size: 40px;
         }
 
@@ -295,8 +296,8 @@
         }
 
         .section-2-taxi-rental {
-            width: 97%;
-            margin: 3% 1.5%;
+            width: 100%;
+            margin: 0;
             position: relative;
         }
 
@@ -326,15 +327,15 @@
         }
 
         h3.h3-Hala-servies {
-            color: black;
+            color: white;
             font-size: 36px;
             margin: 5% 0;
         }
 
         p.Hala-pservies {
-            color: blueviolet;
+            color: black;
             line-height: 25px;
-            font-size: 17px;
+            font-size: 19px;
             margin: 5% 0;
         }
 
@@ -518,7 +519,7 @@
 
                     <div class="section-clintes-servies-taxi">
 
-                        <div class="contener-clintes-servies-taxi">
+                        <div class="contener-clintes-servies-taxi" style="border: solid 7px grey;">
 
                             <picture class="img-picture-taxi">
                                 <img src="img/taxi-uslogin.png" alt="picture">
@@ -547,61 +548,7 @@
 
                         </div>
 
-                        <div class="section-taxi-rental">
-
-                            <div class="contener-taxi-rental">
-
-                                <div class="img-taxi-rental"><img src="img/taxi-rental.png" alt="" class="image-rental">
-                                </div>
-
-                                <div class="servies-words">
-
-                                    <div class="words-servies">
-                                        <h3 class="h3serviesg-taxi">Hala</h3>
-                                        <p class="pservies">Book a Hala, Dubai’s most affordable taxi, with a tap. Only
-                                            available on the S-Logan app.
-                                        </p>
-
-                                        <button class="buttonofthething-taxi">
-                                            <a href="#" class="LINKOFTHETHING">Book Your Ride</a>
-                                        </button>
-                                    </div>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <div class="section-taxi-rental">
-
-                            <div class="contener-taxi-rental">
-
-                                <div class="servies-words height-this">
-
-                                    <div class="words-servies">
-                                        <h3 class="h3serviesg-taxi">Hala Kids</h3>
-                                        <p class="pservies">Kids need affordable rides too. Book a car that has a child
-                                            seat to travel safely with a bundle of joy..
-                                        </p>
-
-                                        <button class="buttonofthething-taxi">
-                                            <a href="#" class="LINKOFTHETHING">Book Your Ride</a>
-                                        </button>
-                                    </div>
-
-
-                                </div>
-
-                                <div class="img-taxi-rental"><img src="img/taxi-rental-hala.png" alt=""
-                                        class="image-rental">
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <div class="details-taxi">
+                        <div class="details-taxi" style="border: solid 7px grey;">
 
                             <div class="data-taxi items-start">
                                 <h2>
@@ -641,7 +588,61 @@
 
                         </div>
 
-                        <div class="section-2-taxi-rental">
+                        <div class="section-taxi-rental" style="border: solid 7px grey;">
+
+                            <div class="contener-taxi-rental">
+
+                                <div class="img-taxi-rental"><img src="img/taxi-rental.png" alt="" class="image-rental">
+                                </div>
+
+                                <div class="servies-words">
+
+                                    <div class="words-servies">
+                                        <h3 class="h3serviesg-taxi">Hala</h3>
+                                        <p class="pservies">Book a Hala, Dubai’s most affordable taxi, with a tap. Only
+                                            available on the S-Logan app.
+                                        </p>
+
+                                        <button class="buttonofthething-taxi">
+                                            <a href="#" class="LINKOFTHETHING">Book Your Ride</a>
+                                        </button>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="section-taxi-rental" style="border: solid 7px grey;">
+
+                            <div class="contener-taxi-rental">
+
+                                <div class="servies-words height-this">
+
+                                    <div class="words-servies">
+                                        <h3 class="h3serviesg-taxi">Hala Kids</h3>
+                                        <p class="pservies">Kids need affordable rides too. Book a car that has a child
+                                            seat to travel safely with a bundle of joy..
+                                        </p>
+
+                                        <button class="buttonofthething-taxi">
+                                            <a href="#" class="LINKOFTHETHING">Book Your Ride</a>
+                                        </button>
+                                    </div>
+
+
+                                </div>
+
+                                <div class="img-taxi-rental"><img src="img/taxi-rental-hala.png" alt=""
+                                        class="image-rental">
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="section-2-taxi-rental" style="border: solid 7px grey;">
 
                             <div class="contener-2-taxi-rental">
 
@@ -679,7 +680,7 @@
     </section>
 
     <!-- footer -->
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer class=" footer-bootstrap-v5 ">
 
         <div class="row ms-0 me-0">
 
@@ -687,7 +688,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
@@ -780,7 +781,7 @@
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
-    
+
     <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
