--- a/profile-driver.html
+++ b/profile-driver.html
@@ -277,7 +277,7 @@
 
             <section id="CLIENTS">
                 <div id="displayCLIENTS">
-                    
+
                     <div class="Client1-carry">
                         <div id="img-logo-inher">
                             <div class="img-uslogo">
@@ -285,9 +285,9 @@
                             </div>
                         </div>
                     </div>
-
-                    <div id="carouselExampleCaptions" class="carousel slide position-relative" data-bs-ride="carousel">
-                        <!-- carousel-item active carousel-caption d-none d-md-block carousel slide-->
+                    <!-- carousel slide-fade -->
+                    <div id="carouselExampleCaptions" class="carousel slide-fade position-relative" data-bs-ride="carousel">
+                        <!-- carousel-item active carousel-caption   d-md-block carousel slide-->
                         <div class="carousel-inner">
 
                             <div class="carousel-item active">
@@ -295,7 +295,7 @@
                                     <i class="fa-solid fa-car img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block mt-3">
+                                <div class="carousel-caption shows  d-md-block mt-3">
                                     <p class="my-address">Choose your ride</p>
 
                                     <p class="words-ride">Select from a wide range of options and get your ride within
@@ -309,7 +309,7 @@
                                     <i class="fa-solid fa-mobile-screen-button img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows   d-md-block  mt-3">
                                     <p class="my-address">Track your ride</p>
 
                                     <p class="words-ride">Track your ride in real time from the moment a Captain is
@@ -323,7 +323,7 @@
                                     <i class="fa-solid fa-credit-card img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows   d-md-block  mt-3">
                                     <p class="my-address">Pay securely</p>
 
                                     <p class="words-ride">Card, Careem Pay, Apple Pay or cash; you can pay securely on
@@ -337,7 +337,7 @@
                                     <i class="fa-solid fa-rotate-left img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows   d-md-block  mt-3">
                                     <p class="my-address">Return</p>
 
                                     <p class="words-ride">Dock your bike at any Careem BIKE station; wait for the green
@@ -351,7 +351,7 @@
                                     <i class="fa-solid fa-bicycle img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows   d-md-block  mt-3">
                                     <p class="my-address">Unlock and ride</p>
 
                                     <p class="words-ride">Download the Careem app, select Bike, and find a station.
@@ -365,7 +365,7 @@
                                     <i class="fa-solid fa-percent img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption shows d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows   d-md-block  mt-3">
                                     <p class="my-address">Save up to 40%</p>
 
                                     <p class="words-ride">Extra savings with no peak charges and regulator fees on
