--- a/Registeruser.html
+++ b/Registeruser.html
@@ -26,21 +26,21 @@
       font-family: 'Poppins', sans-serif;
     }
 
-    section.section-registerdriver {
+    section.section-registeruser {
       width: 100%;
       margin-top: 5%;
     }
 
-    .section-driver {
-      width: 90%;
+    .section-login {
+      width: 95%;
+      margin-left: 2.5%;
       display: flex;
       justify-content: center;
     }
 
     .wrapper {
       position: relative;
-      max-width: 430px;
-      width: 100%;
+      width: 455px;
       background: #fff;
       padding: 34px;
       border-radius: 6px;
@@ -48,22 +48,16 @@
       background: #4070f4;
     }
 
-    .wrapper h2 {
-      position: relative;
-      font-size: 22px;
-      font-weight: 600;
-      color: #333;
-    }
 
-    .wrapper h2::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      height: 3px;
-      width: 28px;
-      border-radius: 12px;
-      background: #4070f4;
+    .wrapper .title {
+      font-size: 35px;
+      font-weight: 600;
+      text-align: center;
+      line-height: 100px;
+      color: #fff;
+      user-select: none;
+      border-radius: 15px 15px 0 0;
+      background: linear-gradient(-135deg, #c850c0, #4158d0);
     }
 
     .wrapper form {
@@ -139,173 +133,172 @@
 
   <div class="container-fluid" id="container-fluid">
 
-      <ul class="navbar-nav me-auto mb-2 flex-new">
+    <ul class="navbar-nav me-auto mb-2 flex-new">
 
-          <div class=" navbar-collapse width" id="navbarSupported">
+      <div class=" navbar-collapse width" id="navbarSupported">
 
-              <li class="nav-item  width">
+        <li class="nav-item  width">
 
-                  <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                      data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fa-solid fa-lock" id="icon-lock"></i> Login</a>
+          <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-lock" id="icon-lock"></i> Login</a>
 
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="Loginuser.html"> user</a></li>
-                      <li><a class="dropdown-item" href="Logindriver.html">driver</a></li>
-                  </ul>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="Loginuser.html"> user</a></li>
+            <li><a class="dropdown-item" href="Logindriver.html">driver</a></li>
+          </ul>
 
-              </li>
+        </li>
 
-              <li class="nav-item  width">
+        <li class="nav-item  width">
 
-                  <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                      data-bs-toggle="dropdown" aria-expanded="false">
-                      <i class="fa-solid fa-circle-check" id="icon-check"></i>Register</a>
+          <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="fa-solid fa-circle-check" id="icon-check"></i>Register</a>
 
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="Registeruser.html">user </a></li>
-                      <li><a class="dropdown-item" href="Registerdriver.html">driver</a></li>
-                  </ul>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="Registeruser.html">user </a></li>
+            <li><a class="dropdown-item" href="Registerdriver.html">driver</a></li>
+          </ul>
 
-              </li>
-          </div>
+        </li>
+      </div>
 
-          <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
-              <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
-          </li>
+      <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+        <button class="btn  button-post" type="submit"> <a href="your-comment.html">+post</a></button>
+      </li>
 
-          <li class="nav-item dropdown width-Click">
-              <button onclick="myFunction()">Click here</button>
-          </li>
+      <li class="nav-item dropdown width-Click">
+        <button onclick="myFunction()">Click here</button>
+      </li>
 
-      </ul>
+    </ul>
 
   </div>
 
   <nav class="navbar text-dark navbar-expand-lg  sticky-top">
 
-      <div class="container-floid container-fluid">
+    <div class="container-floid container-fluid">
 
-          <a class="navbar-brand link-logo-new" href="index.html">
-              <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
-              <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
-          </a>
+      <a class="navbar-brand link-logo-new" href="index.html">
+        <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
+        <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
+      </a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-              aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 
-              <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-bars"></i>
 
-              <!-- <span class="navbar-toggler-icon"></span> -->
+        <!-- <span class="navbar-toggler-icon"></span> -->
 
-          </button>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-              <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
-                          data-bs-toggle="dropdown" aria-expanded="false">
-                          home
-                      </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              home
+            </a>
 
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                          <li><a class="dropdown-item" href="index after login.html">index after login</a></li>
+              <li><a class="dropdown-item" href="index after login.html">index after login</a></li>
 
-                      </ul>
+            </ul>
 
-                  </li>
+          </li>
 
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                          data-bs-toggle="dropdown" aria-expanded="false">
-                          Cars </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Cars </a>
 
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                          <li><a class="dropdown-item" href="Models-Cars.html">Models-Cars</a></li>
-                          <li><a class="dropdown-item" href="car-profile.html">Car Profile</a></li>
-                          <li><a class="dropdown-item" href="car-detail.html">Cars Detail</a></li>
-                          <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a>
-                          </li>
-                          <li><a class="dropdown-item" href="submit-car-intro.html">Submit Car Introduction</a></li>
-                          <li><a class="dropdown-item" href="submit-car-for-rent.html">Submit Car For Rent</a></li>
+              <li><a class="dropdown-item" href="Models-Cars.html">Models-Cars</a></li>
+              <li><a class="dropdown-item" href="car-profile.html">Car Profile</a></li>
+              <li><a class="dropdown-item" href="car-detail.html">Cars Detail</a></li>
+              <li><a class="dropdown-item" href="create-route-notification.html">Route Notification</a>
+              </li>
+              <li><a class="dropdown-item" href="submit-car-intro.html">Submit Car Introduction</a></li>
+              <li><a class="dropdown-item" href="submit-car-for-rent.html">Submit Car For Rent</a></li>
 
-                      </ul>
+            </ul>
 
-                  </li>
+          </li>
 
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                          data-bs-toggle="dropdown" aria-expanded="false">
-                          Our-Business
-                      </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Our-Business
+            </a>
 
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="Rides.html">Rides</a></li>
-                          <li><a class="dropdown-item" href="Taxi.html">Taxi</a></li>
-                          <li><a class="dropdown-item" href="motor-bike.html">motor-bike</a></li>
-                          <li><a class="dropdown-item" href="Car-Rental.html">Car-Rental</a></li>
-                          <li><a class="dropdown-item" href="School-Rides.html">School-Rides</a></li>
-                      </ul>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="Rides.html">Rides</a></li>
+              <li><a class="dropdown-item" href="Taxi.html">Taxi</a></li>
+              <li><a class="dropdown-item" href="motor-bike.html">motor-bike</a></li>
+              <li><a class="dropdown-item" href="Car-Rental.html">Car-Rental</a></li>
+              <li><a class="dropdown-item" href="School-Rides.html">School-Rides</a></li>
+            </ul>
 
-                  </li>
+          </li>
 
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                          data-bs-toggle="dropdown" aria-expanded="false">
-                          Profiles
-                      </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Profiles
+            </a>
 
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="profile-driver.html"> profile-driver</a></li>
-                          <li><a class="dropdown-item" href="profile-user.html">profile-user</a></li>
-                      </ul>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="profile-driver.html"> profile-driver</a></li>
+              <li><a class="dropdown-item" href="profile-user.html">profile-user</a></li>
+            </ul>
 
-                  </li>
+          </li>
 
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                          data-bs-toggle="dropdown" aria-expanded="false">
-                          More Pages
-                      </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              More Pages
+            </a>
 
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <li><a class="dropdown-item" href="Services.html">Services</a></li>
-                          <li><a class="dropdown-item" href="About-Us.html">About-Us</a></li>
-                          <li><a class="dropdown-item" href="Contact-Us.html">Contact-Us</a></li>
-                          <li><a class="dropdown-item" href="Blog.html">Blog</a></li>
-                          <li><a class="dropdown-item" href="Our-Values.html">Our-Values</a></li>
-                          <li><a class="dropdown-item" href="Our-Effect.html">Our-Effect</a></li>
-                      </ul>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="Services.html">Services</a></li>
+              <li><a class="dropdown-item" href="About-Us.html">About-Us</a></li>
+              <li><a class="dropdown-item" href="Contact-Us.html">Contact-Us</a></li>
+              <li><a class="dropdown-item" href="Blog.html">Blog</a></li>
+              <li><a class="dropdown-item" href="Our-Values.html">Our-Values</a></li>
+              <li><a class="dropdown-item" href="Our-Effect.html">Our-Effect</a></li>
+            </ul>
 
-                  </li>
-              </ul>
-
-          </div>
-
-          <div class="whatsapp">
-              <div class="Whatsapp1">
-                  <span class="whatsapp2">
-                      <i class="fa-brands fa-whatsapp"></i>
-                  </span>
-                  <div id="what-sapp">
-                      <p class="whatsapp3">Whatsapp now</p>
-                      <span class="span-phone">01152148220</span>
-                  </div>
-              </div>
-          </div>
+          </li>
+        </ul>
 
       </div>
+
+      <div class="whatsapp">
+        <div class="Whatsapp1">
+          <span class="whatsapp2">
+            <i class="fa-brands fa-whatsapp"></i>
+          </span>
+          <div id="what-sapp">
+            <p class="whatsapp3">Whatsapp now</p>
+            <span class="span-phone">01152148220</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </nav>
 
-  <section class="section-registerdriver">
-    <div class="section-driver">
+  <section class="section-registeruser">
+    <div class="section-login">
       <div class="wrapper">
-        <h2>Registration USER</h2>
+        <div class="title">Registration USER</div>
         <form action="profile-user.html">
           <div class="input-box">
             <input type="text" placeholder="Enter your name" required>
@@ -343,7 +336,7 @@
 
         <div class="logo-footer mt-3 mb-3">
 
-          <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+          <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
         </div>
 
