--- a/Rides.html
+++ b/Rides.html
@@ -27,31 +27,26 @@
         }
 
         #aboutusour {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
         }
 
         picture.img-picture {
-            width: 95%;
-            margin-left: 2.5%;
+            width:  100%;
             display: block;
         }
 
-        .img-picture2{
-            width: 95%;
-            margin-left: 2.5%;
+        .img-picture2 {
+            width:  100%;
             display: block;
         }
 
-        .img-picture3{
-            width: 95%;
-            margin-left: 2.5%;
+        .img-picture3 {
+            width: 100%;
             display: block;
         }
 
         .img-picture img {
             width: 100%;
-            border-radius: 2.5rem;
         }
 
         .img-picture2 img {
@@ -59,7 +54,7 @@
             border-radius: 5%;
         }
 
-        .img-picture3 img{
+        .img-picture3 img {
             width: 100%;
             border-radius: 5%;
         }
@@ -71,19 +66,17 @@
         section#rides {
             width: 100%;
             position: relative;
-            margin: 5% 0;
+            margin: 2% 0;
         }
 
         .section-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
             /* background: linear-gradient(43.28deg, #3837e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
         }
 
         .contener-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
         }
 
         .contener-clintes-servies {
@@ -100,7 +93,6 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 2.5rem;
             border: 2px solid blueviolet;
         }
 
@@ -117,15 +109,15 @@
         }
 
         h3.h3servies {
-            color: black;
+            color: wheat;
             font-size: 36px;
             margin: 5% 0;
         }
 
         p.pservies {
-            color: blueviolet;
+            color: black;
             line-height: 25px;
-            font-size: 17px;
+            font-size: 18px;
             margin: 5% 0;
         }
 
@@ -133,7 +125,7 @@
             background: none;
             border: none;
             outline: none;
-            width: 25%;
+            width: 35%;
             height: 40px;
             color: white;
             font-size: 16px;
@@ -142,8 +134,9 @@
         a.LINKOFTHETHING {
             width: 100%;
             height: 100%;
-            background-color: rgb(105, 144, 228);
-            color: rgba(45, 46, 46);
+            font-size: 18px;
+            background-color: yellow;
+            color: blue;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -153,8 +146,8 @@
 
 
         a.LINKOFTHETHING:hover {
-            background-color: rgb(0 51 108);
-            color: rgb(179, 181, 211);
+            background-color: blue;
+            color: yellow !important;
             transform: translateY(-6px);
         }
 
@@ -164,11 +157,14 @@
 
 
         .cells-servies-rides {
-            height: 350px;
             background: linear-gradient(43.28deg, #3837e4 24.38%, #7280e0 70.46%);
             border-radius: 2.5rem;
             width: 95%;
             margin: 2% 2.5%;
+        }
+
+        .cell-responciv {
+            padding: 2% 0;
         }
 
         .cell-responsive {
@@ -205,13 +201,14 @@
         }
 
         .gride {
-            width: 30% ;
+            width: 30%;
             height: 135px !important;
         }
 
         .ride-cell {
             height: 50%;
             border-radius: 2.5rem;
+            object-fit: fill !important;
         }
 
         .words-ride-cells {
@@ -228,21 +225,21 @@
 
         h4.h4cell {
             font-size: 30px;
-            color: #739ed1;
+            color: black;
         }
 
         p.pcell {
             line-height: 25px;
             font-size: 17px;
-            color: #fdfdfc;
+            color: yellow;
             margin-top: 1%;
         }
 
         .details {
             background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
             border-radius: 2.5rem;
-            width: 95%;
-            margin: 2% 2.5%;
+            width: 100%;
+            margin: 2% 0%;
             padding: 2% 0;
             display: flex;
             justify-content: center;
@@ -473,23 +470,62 @@
         <div id="aboutusour">
             <div class="aboutcarcarry">
 
-                <picture class="img-picture">
+                <picture class="img-picture" style="border: solid 7px grey;">
                     <img src="img/picture -ride.png" alt="picture">
                 </picture>
 
-                <picture class="img-picture2">
+                <picture class="img-picture2" style="border: solid 7px grey;">
                     <img src="img/pictuer-rides-responsive.png" alt="picture">
                 </picture>
 
-                <picture class="img-picture3">
+                <picture class="img-picture3" style="border: solid 7px grey;">
                     <img src="img/picture-rieds-responsive-1.png" alt="picture">
                 </picture>
+
+                <div class="details" style="border: solid 7px grey;">
+
+                    <div class="data items-start">
+                        <h2>
+                            <img src="img/logo-black.png" alt="logo">
+
+                            <span>Rides</span>
+                        </h2>
+                        <p>
+                            Order a ride with El-Slong, and go further, faster.
+                        </p>
+                    </div>
+
+                    <div class="features">
+                        <div class="Ride-servies">
+                            <picture class="image-w-20"><img src="https://upload-cdn.careem.com/sedan_7240765cf3.png"
+                                    alt="sedan_7240765cf3" class="qwer-img">
+                            </picture> <span>Comfort</span>
+                        </div>
+                        <div class="Ride-servies">
+                            <picture class=" image-w-20"><img
+                                    src="https://upload-cdn.careem.com/executive_6395d52741.png"
+                                    alt="executive_6395d52741" class="qwer-img"></picture>
+                            <span>Executive</span>
+                        </div>
+                        <div class="Ride-servies">
+                            <picture class=" image-w-20"><img src="https://upload-cdn.careem.com/max_van_f9bb9ca049.png"
+                                    alt="max_van_f9bb9ca049" class="qwer-img"></picture> <span>Max</span>
+                        </div>
+                        <div class="Ride-servies">
+                            <picture class=" image-w-20"><img
+                                    src="https://upload-cdn.careem.com/kids_seat_2fe5015485.png"
+                                    alt="kids_seat_2fe5015485" class="qwer-img"></picture>
+                            <span>Kids</span>
+                        </div>
+                    </div>
+
+                </div>
 
                 <section id="rides">
 
                     <div class="section-clintes-servies">
 
-                        <div class="contener-clintes-servies">
+                        <div class="contener-clintes-servies" style="border: solid 7px grey;">
 
                             <div class="image-servies"><img src="img/SERVIES_RIDES.png" alt="SERVIES_RIDES"
                                     class="image-CLINTES"></div>
@@ -518,7 +554,7 @@
 
                     </div>
 
-                    <section class="cells-servies-rides">
+                    <section class="cells-servies-rides" style="border: solid 7px grey;">
                         <div class="cell-responciv">
 
                             <div class="cell-responsive">
@@ -555,8 +591,8 @@
                                     <div class="words-ride-cells">
                                         <div class="words-cell">
                                             <h4 class="h4cell">Pay securely</h4>
-                                            <p class="pcell">Card, Careem Pay, Apple Pay or cash; you can pay securely
-                                                on Careem.</p>
+                                            <p class="pcell">Card, El-Slong Pay, Apple Pay or cash; you can pay securely
+                                                on El-Slong.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -567,48 +603,6 @@
 
                     </section>
 
- 
-                    <div class="details">
-
-                        <div class="data items-start">
-                            <h2>
-                                <img src="img/logo-black.png" alt="logo">
-
-                                <span>Rides</span>
-                            </h2>
-                            <p>
-                                Order a ride with Careem, and go further, faster.
-                            </p>
-                        </div>
-
-                        <div class="features">
-                            <div class="Ride-servies">
-                                <picture class="image-w-20"><img
-                                        src="https://upload-cdn.careem.com/sedan_7240765cf3.png" alt="sedan_7240765cf3"
-                                        class="qwer-img">
-                                </picture> <span>Comfort</span>
-                            </div>
-                            <div class="Ride-servies">
-                                <picture class=" image-w-20"><img
-                                        src="https://upload-cdn.careem.com/executive_6395d52741.png"
-                                        alt="executive_6395d52741" class="qwer-img"></picture>
-                                <span>Executive</span>
-                            </div>
-                            <div class="Ride-servies">
-                                <picture class=" image-w-20"><img
-                                        src="https://upload-cdn.careem.com/max_van_f9bb9ca049.png"
-                                        alt="max_van_f9bb9ca049" class="qwer-img"></picture> <span>Max</span>
-                            </div>
-                            <div class="Ride-servies">
-                                <picture class=" image-w-20"><img
-                                        src="https://upload-cdn.careem.com/kids_seat_2fe5015485.png"
-                                        alt="kids_seat_2fe5015485" class="qwer-img"></picture>
-                                <span>Kids</span>
-                            </div>
-                        </div>
-
-                    </div>
-
                 </section>
 
             </div>
@@ -618,108 +612,108 @@
     </section>
 
     <!-- footer -->
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer class=" footer-bootstrap-v5 ">
 
         <div class="row ms-0 me-0">
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="logo-footer mt-3 mb-3">
-  
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
-  
+
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
+
                 </div>
-  
+
                 <div class="d-flex download-fluter  mt-3 mb-3">
-  
+
                     <div class="image-link-one">
                         <img src="img/box1-download-links-AppStore.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                     <div class="image-link-one">
                         <img src="img/box2-download-links-google-play.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                     <div class="image-link-one">
                         <img src="img/box3-download-links-android.webp" class=" mt-2 mb-2" alt="AppStore">
                     </div>
-  
+
                 </div>
-  
+
             </div>
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="phone-whatsapp mt-3 mb-3">
-  
+
                     <h2 class="h2ourpage"><a href="#">+20 100 885 4383</a></h2>
                     <h2 class="h2ourpage"><a href="#">+20 0115 214 8220</a></h2>
-  
+
                 </div>
-  
-  
-  
+
+
+
             </div>
-  
+
             <div class="col-lg-4 col-md-6 col-sm-12">
-  
+
                 <div class="icons-goto-pages ">
-  
+
                     <ul class="this-list-ourpages mt-3 mb-3 d-flex align-items-center justify-content-between">
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-facebook-f" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-twitter" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                         <li class="ABOUT-US-OURPAES">
                             <a href="" class="goto-like-page">
                                 <i class="fa-brands fa-instagram" style="color: #376ed3; font-size: 30px;"></i></a>
                         </li>
-  
+
                     </ul>
-  
+
                 </div>
-  
-  
-  
+
+
+
             </div>
-  
-  
+
+
             <div class="row container-fluid">
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <p class="p-footer">Terms-Policy © 2023</p>
                 </div>
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Terms-of-Service.html" class="goto-like-top">Terms of Service</a>
                     </button>
                 </div>
-  
+
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <button id="link-click-go-to">
                         <a href="Privacy-Policy.html" class="goto-like-top">Privacy Policy</a>
                     </button>
                 </div>
-  
+
             </div>
-  
-  
+
+
         </div>
-  
-      </footer>
+
+    </footer>
 
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
-    
+
     <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
