--- a/Services.html
+++ b/Services.html
@@ -982,8 +982,9 @@
         h3.h3serviesschool-rides2,
         h3.h3serviesDelivery1,
         h3.h3serviesDelivery2 h3.h3serviesTickets1,
-        h3.h3serviesTickets2 {
-            color: #0c3f9f;
+        h3.h3serviesTickets2,
+        h3.h3serviesTickets1{
+            color: white;
             font-size: 35px;
             margin: 4% 0;
         }
@@ -998,9 +999,9 @@
         p.pserviesTickets2 {
             margin: 4% 0;
             line-height: 25px !important;
-            font-size: 17px;
+            font-size: 18px;
             font-weight: 700;
-            color: #4516cf;
+            color: black;
         }
 
         button.buttonoftheCarRental1,
@@ -1030,8 +1031,9 @@
         a.LINKOFTHETickets2 {
             width: 100%;
             height: 100%;
-            background-color: rgb(105, 144, 228);
-            color: rgba(45, 46, 46);
+            background-color: yellow;
+            font-size: 18px;
+            color: blue;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1048,8 +1050,8 @@
         a.LINKOFTHEDelivery2:hover,
         a.LINKOFTHETickets1:hover,
         a.LINKOFTHETickets2:hover {
-            background-color: rgb(0 51 108);
-            color: rgb(179, 181, 211);
+            background-color: blue;
+            color: yellow !important;
             transform: translateY(-6px);
         }
 
@@ -1242,12 +1244,12 @@
                     <div class="imgaboutus"><img src="img/work-us.jpg" alt="work" class="aboutuus"></div>
                     <div class="words-ABOUTUS">
                         <div class="padding-aboutus">
-                            <h2 class="h2about">A documentary about Careem</h2>
+                            <h2 class="h2about">A documentary about El-Trip</h2>
 
-                            <p class="pabout">In 2012 Careem’s co-founders left their jobs to build something big and
+                            <p class="pabout">In 2012 El-Trip’s co-founders left their jobs to build something big and
                                 meaningful in a region with huge potential. Their purpose was clear: to simplify
                                 lives,and
-                                build an awesome organisation that inspires. This is the story of Careem’s first decade,
+                                build an awesome organisation that inspires. This is the story of El-Trip’s first decade,
                                 spotlighting the passion and hustle behind the region’s first tech unicorn.</p>
                         </div>
                     </div>
@@ -2019,7 +2021,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
