--- a/motor-bike.html
+++ b/motor-bike.html
@@ -34,20 +34,20 @@
         }
 
         #aboutusour {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
         }
 
         .section-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0;
             /* background: linear-gradient(43.28deg, #3837e4 24.38%, #7280e0 70.46%); */
             border-radius: 2.5rem;
         }
 
         .contener-clintes-servies {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
         }
 
         .contener-clintes-servies {
@@ -81,15 +81,15 @@
         }
 
         h3.h3servies {
-            color: black;
+            color: wheat;
             font-size: 36px;
-            margin: 5% 0;
+            margin: 0;
         }
 
         p.pservies {
-            color: blueviolet;
+            color: blue;
             line-height: 25px;
-            font-size: 17px;
+            font-size: 19px;
             margin: 5% 0;
         }
 
@@ -97,7 +97,7 @@
             background: none;
             border: none;
             outline: none;
-            width: 25%;
+            width: 35%;
             height: 40px;
             color: white;
             font-size: 16px;
@@ -106,8 +106,8 @@
         a.LINKOFTHETHING {
             width: 100%;
             height: 100%;
-            background-color: rgb(105, 144, 228);
-            color: rgba(45, 46, 46);
+            background-color: yellow;
+            color: blue;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -117,8 +117,8 @@
 
 
         a.LINKOFTHETHING:hover {
-            background-color: rgb(0 51 108);
-            color: rgb(179, 181, 211);
+            background-color: blue;
+            color: yellow !important;
             transform: translateY(-6px);
         }
 
@@ -126,38 +126,38 @@
         section#Bike {
             width: 100%;
             position: relative;
-            margin: 5% 0;
+            margin: 0;
         }
 
         .section-clintes-bike {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0;
             height: 100%;
         }
 
         .contener-clintes-servies-Bike {
-            width: 97%;
-            margin: 1.5% 1.5%;
+            width: 100%;
+            margin: 0;
             height: auto;
             position: relative;
         }
 
 
         picture.img-picture-bike {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             display: block;
         }
 
         picture.img-picture-bike2 {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             display: block;
         }
 
         picture.img-picture-bike3 {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             display: block;
         }
 
@@ -217,8 +217,8 @@
             height: 350px;
             background: linear-gradient(43.28deg, #3837e4 24.38%, #7280e0 70.46%);
             border-radius: 2.5rem;
-            width: 95%;
-            margin: 2% 2.5%;
+            width: 100%;
+            margin: 0;
             padding: 1%;
         }
 
@@ -250,7 +250,7 @@
         }
 
         .gridess {
-            width: 30% ;
+            width: 30%;
             height: 135px !important;
         }
 
@@ -265,9 +265,9 @@
         }
 
         .words-bike-cells {
-            margin: 3% 0;
+            margin: 0;
             display: flex;
-            width: 95%;
+            width: 100%;
             justify-content: center;
         }
 
@@ -278,29 +278,29 @@
 
         h4.h4celbike {
             font-size: 30px;
-            color: #739ed1;
+            color: white;
         }
 
         p.pcelbike {
             line-height: 25px;
             font-size: 17px;
-            color: #fdfdfc;
+            color: black;
             margin-top: 1%;
         }
 
         /*  */
 
         .section-bike-rental {
-            width: 95%;
-            margin-left: 2.5%;
+            width: 100%;
+            margin-left: 0%;
             background-color: #b7b7dd;
             border-radius: 2.5rem;
         }
 
         .contener-bike-rental {
             display: flex;
-            width: 97%;
-            margin-left: 1.5%;
+            width: 100%;
+            margin-left: 0%;
             justify-content: space-around;
             padding: 1%;
         }
@@ -327,7 +327,7 @@
         }
 
         h3.h3serviesbike {
-            color: #0c3f9f;
+            color: white;
             font-size: 35px;
             margin: 4% 0;
         }
@@ -337,7 +337,7 @@
             line-height: 25px !important;
             font-size: 17px;
             font-weight: 700;
-            color: #4516cf;
+            color: black;
         }
 
         button.buttonofthebike {
@@ -353,8 +353,8 @@
         a.LINKOFTHEBIKE {
             width: 100%;
             height: 100%;
-            background-color: rgb(105, 144, 228);
-            color: rgba(45, 46, 46);
+            background-color: yellow;
+            color: blue;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -364,16 +364,16 @@
 
 
         a.LINKOFTHEBIKE:hover {
-            background-color: rgb(0 51 108);
-            color: rgb(179, 181, 211);
+            background-color: blue;
+            color: yellow !important;
             transform: translateY(-6px);
         }
 
         .details-Bike {
             background: linear-gradient(43.28deg, #9da2e4 24.38%, #7280e0 70.46%);
             border-radius: 2.5rem;
-            width: 95%;
-            margin: 2% 2.5%;
+            width: 100%;
+            margin: 0%;
             padding: 2% 0;
             display: flex;
             justify-content: center;
@@ -416,7 +416,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: #b7b7dd;
+            color: white;
         }
 
         .items-start h2 {
@@ -429,7 +429,7 @@
 
         .items-start span {
             margin-left: -4%;
-            color: blueviolet;
+            color: white;
             font-size: 40px;
         }
 
@@ -439,13 +439,13 @@
         }
 
         .section-2-bike-rental {
-            width: 97%;
+            width: 100%;
             margin: 3% 1.5%;
             position: relative;
         }
 
         .contener-2-bike-rental {
-            width: 97%;
+            width: 100%;
             display: flex;
             justify-content: space-around;
             margin-left: 1.5%;
@@ -663,7 +663,7 @@
 
                     <div class="section-clintes-bike">
 
-                        <div class="contener-clintes-servies-Bike">
+                        <div class="contener-clintes-servies-Bike" style="border: solid 7px grey;">
 
                             <picture class="img-picture-bike">
                                 <img src="img/bike-servies.png" alt="picture">
@@ -692,7 +692,49 @@
 
                         </div>
 
-                        <section class="cells-servies-bike">
+                        <div class="details-Bike" style="border: solid 7px grey;">
+
+                            <div class="data-Bike items-start">
+                                <h2>
+                                    <img src="img/logo-black.png" alt="logo">
+
+                                    <span>Bike</span>
+                                </h2>
+                                <p>
+                                    Dubai’s most affordable ride.
+                                </p>
+                            </div>
+
+                            <div class="features-Bike">
+                                <div class="Bike-servies">
+                                    <div class="image-qwe-20"><span
+                                            class="material-symbols-outlined qwer-left-image-bike">
+                                            pedal_bike
+                                        </span>
+                                    </div>
+                                    <span>Hala</span>
+                                </div>
+                                <div class="Bike-servies">
+                                    <div class=" image-qwe-20"><span class="material-symbols-outlined qwer-image-bike">
+                                            directions_bike
+                                        </span>
+                                    </div>
+                                    <span>Hala Max</span>
+                                </div>
+
+                                <div class="Bike-servies">
+                                    <div class=" image-qwe-20"><span
+                                            class="material-symbols-outlined qwer-right-image-bike">
+                                            motorcycle
+                                        </span>
+                                    </div>
+                                    <span>Hala Kids</span>
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <section class="cells-servies-bike" style="border: solid 7px grey;">
                             <div class="cell-responciv-bike">
 
                                 <div class="cell-responsive-bike">
@@ -744,7 +786,7 @@
                             </div>
                         </section>
 
-                        <div class="section-bike-rental">
+                        <div class="section-bike-rental" style="border: solid 7px grey;">
 
                             <div class="contener-bike-rental">
 
@@ -773,7 +815,7 @@
 
                         </div>
 
-                        <div class="section-2-bike-rental">
+                        <div class="section-2-bike-rental" style="border: solid 7px grey;">
 
                             <div class="contener-2-bike-rental">
 
@@ -804,47 +846,6 @@
 
                     </div>
 
-                    <div class="details-Bike">
-
-                        <div class="data-Bike items-start">
-                            <h2>
-                                <img src="img/logo-black.png" alt="logo">
-
-                                <span>Bike</span>
-                            </h2>
-                            <p>
-                                Dubai’s most affordable ride.
-                            </p>
-                        </div>
-
-                        <div class="features-Bike">
-                            <div class="Bike-servies">
-                                <div class="image-qwe-20"><span class="material-symbols-outlined qwer-left-image-bike">
-                                        pedal_bike
-                                    </span>
-                                </div>
-                                <span>Hala</span>
-                            </div>
-                            <div class="Bike-servies">
-                                <div class=" image-qwe-20"><span class="material-symbols-outlined qwer-image-bike">
-                                        directions_bike
-                                    </span>
-                                </div>
-                                <span>Hala Max</span>
-                            </div>
-
-                            <div class="Bike-servies">
-                                <div class=" image-qwe-20"><span
-                                        class="material-symbols-outlined qwer-right-image-bike">
-                                        motorcycle
-                                    </span>
-                                </div>
-                                <span>Hala Kids</span>
-                            </div>
-                        </div>
-
-                    </div>
-
                 </section>
 
             </div>
@@ -852,7 +853,7 @@
     </section>
 
     <!-- subhead -->
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer class=" footer-bootstrap-v5">
 
         <div class="row ms-0 me-0">
 
@@ -860,7 +861,7 @@
 
                 <div class="logo-footer mt-3 mb-3">
 
-                    <img src="img/‏‏Vector-footer.png" alt="Vector-footer">
+                    <img src="img/steering-wheel-icon.svg" alt="Vector-footer">
 
                 </div>
 
